2010-01-13  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::chop_trailing_singletons): Only uniquify
	if really needed.
	* Array.h (Array<T>::Array (T*, const dim_vector&)): Call
	chop_trailing_singletons.
	(Array<T>::Array (const Array<T>&, const dim_vector&,
	octave_idx_type...)): Ditto.
	(Array<T>::Array (const dim_vector&)): Ditto.
	(Array<T>::Array (const dim_vector&, const T&)): Ditto.
	(Array<T>::chop_trailing_singletons): Deprecate.
	* Array.cc (Array::Array(const Array&, const dim_vector&)): Ditto.
	(Array::index (const Array<idx_vector>&, ...)): Ditto.
	(Array<T>::permute): Don't call deprecate method here.
	(Array<T>::assign): Neither here.

2010-01-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Remove unnecessary use of simple_move_if_change_rule to allow
	Make to update timestamps

2010-01-08  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::crefT): New helper typedef.
	(Array<T>::elem const, Array<T>::xelem const, 
	Array<T>::checkelem const, Array<T>::operator () const): Return crefT.
	(Array<T>::range_error const): Remove overloads.
	* Array.cc (Array<T>::range_error const): Remove overloads.

2010-01-07  John W. Eaton  <jwe@octave.org>

	* oct-time.cc (octave_time::stamp): Assume gettimeofday is
	available and that it takes two arguments.

2010-01-07  Jaroslav Hajek  <highegg@gmail.com>

	* lo-utils.cc (octave_fgets (FILE *, bool&)): Add OCTAVE_QUIT at the
	end.

2010-01-05  John W. Eaton  <jwe@octave.org>

	* Makefile.am (AM_CPPFLAGS): Include @CPPFLAGS@ and -I../libgnu
	in the list.

2009-12-30  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::maybe_reduce): Implement reduction rule
	for subsequent ones () indices.

2009-12-28  John W. Eaton  <jwe@octave.org>

	* file-ops.cc (fle_ops::mkdir_internal,
	file_ops::mkfifo_internal): New private static functions.
	* file-ops.h (file_ops::mkdir, file_ops::mkdir): Move
	definitions here from file-ops.cc.  Forward to X_internal functions.
